--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,58 +1,58 @@
 [build-system]
-requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
-
-[project]
-name = 'social-auth-app-pyramid'
-dynamic = ["version"]
-dependencies = [
-    "six",
-    "social-auth-core>=1.0.0",
-    "social-auth-storage-sqlalchemy>=1.0.0",
-]
-authors = [
-  {name = "Matias Aguirre", email = "matiasaguirre@gmail.com"},
-  {name = "Lee Ji-ho", email = "search5@gmail.com"},
-]
-description = 'Python Social Authentication, Pyramid integration.'
-license = {text = 'BSD'}
-keywords = ["pyramid", "sqlalchemy", "social auth"]
-readme = "README.md"
-classifiers=[
-    'Development Status :: 4 - Beta',
-    'Topic :: Internet',
-    'License :: OSI Approved :: BSD License',
-    'Intended Audience :: Developers',
-    'Environment :: Web Environment',
-    'Programming Language :: Python',
-    'Programming Language :: Python :: 3.7',
-    'Programming Language :: Python :: 3.8',
-    'Programming Language :: Python :: 3.9',
-    'Programming Language :: Python :: 3.10',
-    'Programming Language :: Python :: 3.11',
-    'Programming Language :: Python :: 3.12'
-]
-requires-python = ">= 3.7"
-
-[project.urls]
-Repository = 'https://github.com/python-social-auth/social-app-pyramid'
-Documentation = 'http://python-social-auth.readthedocs.org'
-Issues = 'https://github.com/python-social-auth/social-app-pyramid/issues'
-Changelog = 'https://github.com/python-social-auth/social-app-pyramid/blob/master/CHANGELOG.md'
+requires = ["setuptools"]
 
 [options]
 zip_safe = false
 
+[project]
+authors = [
+  {name = "Matias Aguirre", email = "matiasaguirre@gmail.com"},
+  {name = "Lee Ji-ho", email = "search5@gmail.com"}
+]
+classifiers = [
+  'Development Status :: 4 - Beta',
+  'Topic :: Internet',
+  'License :: OSI Approved :: BSD License',
+  'Intended Audience :: Developers',
+  'Environment :: Web Environment',
+  'Programming Language :: Python',
+  'Programming Language :: Python :: 3.7',
+  'Programming Language :: Python :: 3.8',
+  'Programming Language :: Python :: 3.9',
+  'Programming Language :: Python :: 3.10',
+  'Programming Language :: Python :: 3.11',
+  'Programming Language :: Python :: 3.12'
+]
+dependencies = [
+  "six",
+  "social-auth-core>=1.0.0",
+  "social-auth-storage-sqlalchemy>=1.0.0"
+]
+description = 'Python Social Authentication, Pyramid integration.'
+dynamic = ["version"]
+keywords = ["pyramid", "sqlalchemy", "social auth"]
+license = {text = 'BSD'}
+name = 'social-auth-app-pyramid'
+readme = "README.md"
+requires-python = ">= 3.7"
+
+[project.urls]
+Changelog = 'https://github.com/python-social-auth/social-app-pyramid/blob/master/CHANGELOG.md'
+Documentation = 'http://python-social-auth.readthedocs.org'
+Issues = 'https://github.com/python-social-auth/social-app-pyramid/issues'
+Repository = 'https://github.com/python-social-auth/social-app-pyramid'
+
+[tool.flake8]
+# Ignore some well known paths
+exclude = ['.venv', '.tox', 'dist', 'doc', 'build', '*.egg', 'db/env.py', 'db/versions/*.py', 'site', 'Pipfile', 'Pipfile.lock']
+max-line-length = 80
+
 [tool.setuptools]
 include-package-data = true
-
-[tool.setuptools.packages]
-find = {}
 
 [tool.setuptools.dynamic]
 version = {attr = "social_pyramid.__version__"}
 
-[tool.flake8]
-max-line-length = 80
-# Ignore some well known paths
-exclude = ['.venv','.tox','dist','doc','build','*.egg','db/env.py','db/versions/*.py','site','Pipfile','Pipfile.lock']
+[tool.setuptools.packages]
+find = {}
