--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,3 +54,11 @@ version = {attr = "social_pyramid.__version__"}
 
 [tool.setuptools.packages]
 find = {}
+
+
+[tool.tomlsort]
+ignore_case = true
+sort_inline_arrays = true
+sort_inline_tables = true
+sort_table_keys = true
+spaces_before_inline_comment = 2
